# Catch2_GoogleTest_dockerfile

./: Dependencies.sh  Dockerfile  Dockr  README.md
.github/workflows/: docker-ci.yml
googleTest_testing/: CMakeLists.txt
testing/: notes.txt
testing/catch2/: Dependencies.sh  Dockerfile
testing/catch2/.github/workflows/: docker_ci.yml  docker_ci_c2
testing/gtest/: Dockerfile
testing/gtest/.github/workflows/: docker-image.yml
